--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Lorem ipsum"
-description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
-repository               : "RayeRen/acad-homepage.github.io"
+title                    : "Guodong Du"
+description              : "Guodong Du's academic homepage"
+repository               : "duguodong7/duguodong7.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -21,8 +21,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Guodong Du"
-  avatar           : "images/android-chrome-512x512.png"
+  name             : "Guodong Du(杜国东)"
+  avatar           : "images/35*45.jpg"
   bio              : "HITSZ"
   location         : "Shenzhen, China"
   employer         :
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # e.g., "github username"
+  github           : "https://github.com/duguodong7"
   google_plus      :
   keybase          :
   instagram        :
