--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
   orcid            : # e.g., "https://orcid.org/xxxx"
   pinterest        :
   soundcloud       :
-  stackoverflow    : "https://openreview.net/profile?id=~Guodong_DU2"
+  stackoverflow    :
   steam            :
   tumblr           :
   twitter          : 
