--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Guodong Du(杜国东)"
-  avatar           : "images/guodong111.jpg"
+  avatar           : "images/duguodong.png"
   bio              : "Harbin Institute of Technology (Shenzhen), HITSZ"
   location         : "Shenzhen, China"
   employer         :
