--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://openreview.net/profile?id=~Guodong_DU2"
+  facebook         : # "https://openreview.net/profile?id=~Guodong_DU2"
   foursquare       :
   github           : "duguodong7"
   google_plus      :
@@ -44,7 +44,7 @@ author:
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "linkedin 国东-杜" # https://www.linkedin.com/in/%E5%9B%BD%E4%B8%9C-%E6%9D%9C-30b496169/
-  dblp             : "https://dblp.org/pid/213/8915-4.html"
+  dblp             : # "https://dblp.org/pid/213/8915-4.html"
   orcid            : # e.g., "https://orcid.org/xxxx"
   pinterest        :
   soundcloud       :
