--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@ main:
   - title: "News"
     url: "/#-news"
 
+  - title: "Recent Projects"
+    url: "/#-recent-projects"
+
   - title: "Publications"
     url: "/#-publications"
 
