--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Guodong Du   (杜国东)"
+  name             : "Guodong Du &ensp;&ensp;&ensp;&ensp;(杜国东)"
   avatar           : "images/duguodong.png"
   bio              : "Harbin Institute of Technology (Shenzhen), HITSZ"
   location         : "Shenzhen, China"
