--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,3 +20,6 @@ main:
     
   - title: "Internships"
     url: "/#-internships"
+
+  - title: "Resume"
+    url: "https://duguodong7.github.io/files/guodong_cv.pdf"
