--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,4 +22,4 @@ main:
     url: "/#-internships"
 
   - title: "Resume"
-    url: "https://duguodong7.github.io/files/guodong_cv.pdf"
+    url: "https://duguodong7.github.io/files/guodong_du_cv.pdf"
